# sktomaf-simple

./: pyproject.toml  sksample.py  test_sksample.py
