[project]
name = "simple-sk"
version = "0.1.0"

dependencies = [
    "semantic-kernel>=1.37.0,<2.0.0",
    "azure-identity >= 1.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.PydanticDeprecatedSince211",
]